--- a/src/rmi/GUI/add_Venue.form
+++ b/src/rmi/GUI/add_Venue.form
@@ -85,6 +85,9 @@
       <Properties>
         <Property name="label" type="java.lang.String" value="Submit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SubmitActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
